argocd/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tfgen
  labels:
    app.kubernetes.io/name: tfgen
    app.kubernetes.io/part-of: tfgen
